@@ -3,6 +3,7 @@ CHANGELOG
 2.0.10
 *	PHP 5.4-ready
 *	Google::translate() deprecated
+*	Support for MySQL reserved words as column names
 *	Bug fix: PHP 5.4's gzdeflate() triggers intermittent data error
 *	Bug fix: exists() causes persistent sessions
 *	Bug fix: set() COOKIE variable borked [[Bug #3489220]
